spacing on project page

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -210,7 +210,7 @@
         </div>
 
         <hr>
-        <h2>Background</h2>
+        <h2 class="background-header">Background</h2>
         <div class="container">
             <p>To mitigate the increasing risk that rising sea levels pose to developed infrastructure along coastal regions, we
             reimagined floating houses and community blocks within the Bay Area by modeling a 3D structure of a sustainable
@@ -262,7 +262,7 @@
 
         <hr>
     
-        <h2>Deliverables</h2>
+        <h2 class="deliverables-header">Deliverables</h2>
             <div class="container">
                 <p> PLACEHOLDER!!!</p>
             </div>
