--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -68,7 +68,7 @@
     <!-- That Cool Top Bar with the image and the info introducing the project -->
     <div class="topbar"d-flex justify-content-center>
         <div class="container">
-            <div class="cool-row">
+            <div class="cool row">
                 <div class="col-12 col-sm-6 d-flex justify-content-center">
                     <img src="../assets/img/floatingblocks15/floating-landing.svg" class="topbar-img">
                 </div>
