columns for deliverable titles and and bubbles

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -271,9 +271,11 @@
             <div class="col-12 col-sm-6">
                 <div class="container">
                     <div class="sectionheader">
-                        <h3>Residence Designs<span><img src="../assets/img/floatingblocks15/initials-1.svg" class="bubbles"></span></h3>
-                        <div id=underline5></div>
-                    </div>
+                        <div class="row">
+                            <h3 class="col6 col-lg-12">Residence Designs <img src="../assets/img/floatingblocks15/initials-1.svg" class="bubbles"> </h3>
+                            <div id=underline5></div>
+                        </div>
+                </div>
                     <div class="row">
                         <div class="col-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-1.svg" class="nums"> </div>
                         <div class="col-11 hmw"> <h7 id="how">How might we create a sustainable structure for individual homes that are adaptable to rising sea levels?</h7></div>
@@ -299,8 +301,10 @@
             </div>
             <div class="col-12 col-sm-6">
                 <div class="sectionheader">
-                    <h3>Community Layout<span><img src="../assets/img/floatingblocks15/initials-2.svg" class="bubbles"></span></h3>
-                    <div id=underline6></div>
+                    <div class="row">
+                        <h3 class="col6 col-lg-12">Community Layout <img src="../assets/img/floatingblocks15/initials-2.svg" class="bubbles"></h3>
+                        <div id=underline6></div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-2.svg" class="nums"> </div>
@@ -326,8 +330,10 @@
             <div class="col-12 col-sm-6">
                 <div class="container">
                     <div class="sectionheader">
-                        <h3>3D Model Fabrication<span><img src="../assets/img/floatingblocks15/initials-3.svg" class="bubbles"></span></h3>
-                        <div id=underline7></div>
+                        <div class="row">
+                            <h3 class="col6 col-lg-12">3D Model Fabrication <img src="../assets/img/floatingblocks15/initials-3.svg" class="bubbles"></h3>
+                            <div id=underline7></div>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-3.svg" class="nums"> </div>
