reordering of images and text

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -268,7 +268,7 @@
             </div>
 
         <div class="row">
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-6 order-lg-1">
                 <div class="container">
                     <div class="sectionheader">
                         <h3>Residence Designs<span><img src="../assets/img/floatingblocks15/initials-1.svg" class="bubbles"></span></h3>
@@ -289,15 +289,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-6 d-flex justify-content-center">
+            <div class="col-12 col-lg-6 order-lg-2 d-flex justify-content-center">
                 <img src="../assets/img/floatingblocks15/deliv-1.png" class="deliverable-img">
             </div>
         <!-- </div>
         <div class="row"> -->
-            <div class="col-12 col-lg-6 d-flex justify-content-center">
-                <img src="../assets/img/floatingblocks15/deliv-2.png" class="deliverable-img">
-            </div>
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-6 order-lg-4">
                 <div class="sectionheader">
                     <h3>Community Layout<span><img src="../assets/img/floatingblocks15/initials-2.svg" class="bubbles"></span></h3>
                     <div id=underline6></div>
@@ -307,8 +304,6 @@
                     <div class="col-11 hmw"> <h7 id="how">How might we make a group of floating homes feel like a community, to maintain an interactive public environment while
                         being environmentally conscious?</h7></div>
                 </div>
-                <!-- <h7 id="how"><span><img src="../assets/img/number-2.svg" class="nums"></span>How might we make a group of floating homes feel like a community, to maintain an interactive public environment while
-                being environmentally conscious?</h7> -->
                 <div class="container">
                     <p class="p4 right">Our goal was to create a housing layout that reflected a community rather than just individual homes. We tested various
                     configurations of the laser-cut structures we had created to determine the best possible community arrangement.
@@ -321,9 +316,12 @@
                     with space for a public area such as a community center or park.</p>
                 </div>
             </div>
+            <div class="col-12 col-lg-6 order-lg-3 d-flex justify-content-center">
+                <img src="../assets/img/floatingblocks15/deliv-2.png" class="deliverable-img">
+            </div>
         <!-- </div>
         <div class="row"> -->
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-6 order-lg-5">
                 <div class="container">
                     <div class="sectionheader">
                         <h3>3D Model Fabrication<span><img src="../assets/img/floatingblocks15/initials-3.svg" class="bubbles"></span></h3>
@@ -351,7 +349,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-6 d-flex justify-content-center">
+            <div class="col-12 col-lg-6 order-lg-6 d-flex justify-content-center">
                 <img src="../assets/img/floatingblocks15/deliv-3.png" class="deliverable-img">
             </div>
         <!-- </div>
