fixed number bubbles on safari mobile

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -249,12 +249,12 @@
                         <div id=underline4></div>
                     </div>
                     <div class="row">
-                    <div class="col-1 d-flex justify-content-center"> <img src="../assets/img/number-1.svg" class="nums"> </div>
-                    <div class="col-11 question"> <h7 id="how">Houses that are functional and environmentally adaptable, while still feeling like homes.</h7></div>
-                        <div class="col-1 d-flex justify-content-center"> <img src="../assets/img/number-2.svg" class="nums"> </div>
-                        <div class="col-11 question"> <h7 id="how">A cohesive community that contains shared public spaces where residents can interact with each other.</h7></div>
-                        <div class="col-1 d-flex justify-content-center"> <img src="../assets/img/number-3.svg" class="nums"> </div>
-                        <div class="col-11 question"> <h7 id="how">A thoughtful design for community block that is safe, secure, and adaptable to rising sea levels.</h7></div>
+                    <div class="col-2 col-sm-1 d-flex justify-content-center"> <img src="../assets/img/number-1.svg" class="nums"> </div>
+                    <div class="col-10 col-sm-11 question"> <h7 id="how">Houses that are functional and environmentally adaptable, while still feeling like homes.</h7></div>
+                        <div class="col-2 col-sm-1 d-flex justify-content-center"> <img src="../assets/img/number-2.svg" class="nums"> </div>
+                        <div class="col-10 col-sm-11 question"> <h7 id="how">A cohesive community that contains shared public spaces where residents can interact with each other.</h7></div>
+                        <div class="col-2 col-sm-1 d-flex justify-content-center"> <img src="../assets/img/number-3.svg" class="nums"> </div>
+                        <div class="col-10 col-sm-11 question"> <h7 id="how">A thoughtful design for community block that is safe, secure, and adaptable to rising sea levels.</h7></div>
                     </div>
                 </div>
             </div>
@@ -277,8 +277,8 @@
                         </div>
                 </div>
                     <div class="row">
-                        <div class="col-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-1.svg" class="nums"> </div>
-                        <div class="col-11 hmw"> <h7 id="how">How might we create a sustainable structure for individual homes that are adaptable to rising sea levels?</h7></div>
+                        <div class="col-2 col-sm-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-1.svg" class="nums"> </div>
+                        <div class="col-10 col-sm-11 hmw"> <h7 id="how">How might we create a sustainable structure for individual homes that are adaptable to rising sea levels?</h7></div>
                     </div>
                     <div class="container">
                         <p class="p1 left">We began by researching existing floating communities to determine the architectural requirements of a floating
@@ -304,8 +304,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-2.svg" class="nums"> </div>
-                    <div class="col-11 hmw"> <h7 id="how">How might we make a group of floating homes feel like a community, to maintain an interactive public environment while
+                    <div class="col-2 col-sm-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-2.svg" class="nums"> </div>
+                    <div class="col-10 col-sm-11 hmw"> <h7 id="how">How might we make a group of floating homes feel like a community, to maintain an interactive public environment while
                         being environmentally conscious?</h7></div>
                 </div>
                 <div class="container">
@@ -334,8 +334,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-3.svg" class="nums"> </div>
-                        <div class="col-11 hmw"> <h7 id="how">How might we develop a three-dimensional model of a floating urban block that is long-lasting and functions to
+                        <div class="col-2 col-sm-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-3.svg" class="nums"> </div>
+                        <div class="col-10 col-sm-11 hmw"> <h7 id="how">How might we develop a three-dimensional model of a floating urban block that is long-lasting and functions to
                             communicate our community designs?</h7></div>
                     </div>
                     <div class="container">
