recommitting user stuff

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -272,7 +272,7 @@
                 <div class="container">
                     <div class="sectionheader">
                         <div class="row">
-                            <h3 class="col6 col-lg-12">Residence Designs <img src="../assets/img/floatingblocks15/initials-1.svg" class="bubbles"> </h3>
+                            <h3 class="col6 col-sm-12">Residence Designs <img src="../assets/img/floatingblocks15/initials-1.svg" class="bubbles"> </h3>
                             <div id=underline5></div>
                         </div>
                 </div>
