image alignment for safari

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -292,7 +292,9 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6 order-lg-2 d-flex justify-content-center">
-                <img src="../assets/img/floatingblocks15/deliv-1.png" class="deliverable-img">
+                <div class="img-container deliverable-img-container">
+                    <img src="../assets/img/floatingblocks15/deliv-1.png" class="deliverable-img">
+                </div>
             </div>
         <!-- </div>
         <div class="row"> -->
@@ -321,7 +323,9 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6 order-lg-3 d-flex justify-content-center">
-                <img src="../assets/img/floatingblocks15/deliv-2.png" class="deliverable-img">
+                <div class="img-container deliverable-img-container">
+                    <img src="../assets/img/floatingblocks15/deliv-2.png" class="deliverable-img">
+                </div>
             </div>
         <!-- </div>
         <div class="row"> -->
@@ -356,7 +360,9 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6 order-lg-6 d-flex justify-content-center">
-                <img src="../assets/img/floatingblocks15/deliv-3.png" class="deliverable-img">
+                <div classs="img-container deliverable-img-container">
+                    <img src="../assets/img/floatingblocks15/deliv-3.png" class="deliverable-img">
+                </div>
             </div>
         <!-- </div>
         <div class="row"> -->
