--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -272,8 +272,8 @@
                 <div class="container">
                     <div class="sectionheader">
                         <div class="row">
-                            <h3 class="col-12 col-md-5">Residence Designs</h3>
-                            <h3 class="col-6 col-md-2"> <img src="../assets/img/floatingblocks15/initials-1.svg" class="bubbles"></h3>
+                            <h3 class="col-12 col-md-6 col-lg-8">Residence Designs</h3>
+                            <div class="col-6 col-md-2"> <img src="../assets/img/floatingblocks15/initials-1.svg" class="bubbles"></div>
                             <div id=underline5></div>
                         </div>
                 </div>
@@ -302,7 +302,8 @@
             <div class="col-12 col-lg-6 order-lg-4">
                 <div class="sectionheader">
                     <div class="row">
-                        <h3 class="col6 col-lg-12">Community Layout <img src="../assets/img/floatingblocks15/initials-2.svg" class="bubbles"></h3>
+                        <h3 class="col-12 col-md-6 col-lg-8">Community Layout</h3>
+                        <div class="col-6 col-md-2"> <img src="../assets/img/floatingblocks15/initials-2.svg" class="bubbles"></div>
                         <div id=underline6></div>
                     </div>
                 </div>
@@ -334,7 +335,8 @@
                 <div class="container">
                     <div class="sectionheader">
                         <div class="row">
-                            <h3 class="col6 col-lg-12">3D Model Fabrication <img src="../assets/img/floatingblocks15/initials-3.svg" class="bubbles"></h3>
+                            <h3 class="col-12 col-md-6 col-lg-8">3D Model Fabrication</h3>
+                            <div class="col-6 col-md-2"> <img src="../assets/img/floatingblocks15/initials-3.svg" class="bubbles"></div>
                             <div id=underline7></div>
                         </div>
                     </div>
