image deliv titles

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -272,9 +272,9 @@
                 <div class="container">
                     <div class="sectionheader">
                         <div class="row">
-                            <h3 class="col-12 col-md-6 col-lg-8">Residence Designs</h3>
-                            <div class="col-6 col-md-2"> <img src="../assets/img/floatingblocks15/initials-1.svg" class="bubbles"></div>
-                            <div id=underline5></div>
+                            <div class="container">
+                                <img class="delivtitle" src="../assets/img/floatingblocks15/deliv-title-1.svg">
+                            </div>
                         </div>
                 </div>
                     <div class="row">
@@ -302,9 +302,9 @@
             <div class="col-12 col-lg-6 order-lg-4">
                 <div class="sectionheader">
                     <div class="row">
-                        <h3 class="col-12 col-md-6 col-lg-8">Community Layout</h3>
-                        <div class="col-6 col-md-2"> <img src="../assets/img/floatingblocks15/initials-2.svg" class="bubbles"></div>
-                        <div id=underline6></div>
+                        <div class="container">
+                        <img class="delivtitle" src="../assets/img/floatingblocks15/deliv-title-2.svg">
+                    </div>
                     </div>
                 </div>
                 <div class="row">
@@ -326,7 +326,9 @@
             </div>
             <div class="col-12 col-lg-6 order-lg-3 d-flex justify-content-center">
                 <div class="img-container deliverable-img-container">
+                    <div class="container">
                     <img src="../assets/img/floatingblocks15/deliv-2.png" class="deliverable-img">
+                    </div>
                 </div>
             </div>
         <!-- </div>
@@ -335,9 +337,9 @@
                 <div class="container">
                     <div class="sectionheader">
                         <div class="row">
-                            <h3 class="col-12 col-md-6 col-lg-8">3D Model Fabrication</h3>
-                            <div class="col-6 col-md-2"> <img src="../assets/img/floatingblocks15/initials-3.svg" class="bubbles"></div>
-                            <div id=underline7></div>
+                            <div class="container">
+                            <img class="delivtitle" src="../assets/img/floatingblocks15/deliv-title-3.svg">
+                            </div>
                         </div>
                     </div>
                     <div class="row">
