the underlines are fine,

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -270,13 +270,9 @@
         <div class="row">
             <div class="col-12 col-lg-6 order-lg-1">
                 <div class="container">
-                    <div class="sectionheader">
-                        <div class="row">
-                            <div class="container">
-                                <img class="delivtitle" src="../assets/img/floatingblocks15/deliv-title-1.svg">
-                            </div>
-                        </div>
-                </div>
+                    <div class="container subtitle">
+                        <img class="delivtitle" src="../assets/img/floatingblocks15/deliv-title-3.svg">
+                    </div>
                     <div class="row">
                         <div class="col-2 col-sm-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-1.svg" class="nums"> </div>
                         <div class="col-10 col-sm-11 hmw"> <h7 id="how">How might we create a sustainable structure for individual homes that are adaptable to rising sea levels?</h7></div>
@@ -299,14 +295,11 @@
             </div>
         <!-- </div>
         <div class="row"> -->
-            <div class="col-12 col-lg-6 order-lg-4">
-                <div class="sectionheader">
-                    <div class="row">
-                        <div class="container">
-                        <img class="delivtitle" src="../assets/img/floatingblocks15/deliv-title-2.svg">
+        <div class="col-12 col-lg-6 order-lg-4">
+            <div class="container">
+                    <div class="container subtitle">
+                        <img class="delivtitle" src="../assets/img/floatingblocks15/deliv-title-3.svg">
                     </div>
-                    </div>
-                </div>
                 <div class="row">
                     <div class="col-2 col-sm-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-2.svg" class="nums"> </div>
                     <div class="col-10 col-sm-11 hmw"> <h7 id="how">How might we make a group of floating homes feel like a community, to maintain an interactive public environment while
@@ -324,6 +317,7 @@
                     with space for a public area such as a community center or park.</p>
                 </div>
             </div>
+        </div>
             <div class="col-12 col-lg-6 order-lg-3 d-flex justify-content-center">
                 <div class="img-container deliverable-img-container">
                     <div class="container">
@@ -335,13 +329,9 @@
         <div class="row"> -->
             <div class="col-12 col-lg-6 order-lg-5">
                 <div class="container">
-                    <div class="sectionheader">
-                        <div class="row">
-                            <div class="container">
-                            <img class="delivtitle" src="../assets/img/floatingblocks15/deliv-title-3.svg">
-                            </div>
-                        </div>
-                    </div>
+                <div class="container subtitle">
+                    <img class="delivtitle" src="../assets/img/floatingblocks15/deliv-title-3.svg">
+                </div>
                     <div class="row">
                         <div class="col-2 col-sm-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-3.svg" class="nums"> </div>
                         <div class="col-10 col-sm-11 hmw"> <h7 id="how">How might we develop a three-dimensional model of a floating urban block that is long-lasting and functions to
