grace's changes: nav bar, footer, mainscroll projects section

--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -55,6 +55,9 @@
                     <li class="nav-item">
                         <a class="nav-link projects" href="projects.html">Projects</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link contact" href="https://forms.gle/dSAgFm9jpetY4B4T6" target="_blank">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
