--- a/indexv15.html
+++ b/indexv15.html
@@ -55,6 +55,9 @@
                     <li class="nav-item">
                         <a class="nav-link projects" href="v1.5/projects.html">Projects</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link contact" href="https://forms.gle/dSAgFm9jpetY4B4T6" target="_blank">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -101,15 +104,21 @@
         <!-- Mission and Members -->
         <div class="members-section">
             <div class="container members">
-                <h2 id="members-title" class="d-flex d-flex justify-content-center  justify-content-center">Who are we?</h2>
+                <h2 id="members-title" class="d-flex justify-content-center">Who are we?</h2>
                 <p class="container"> Introducing the hearts and creative minds behind our work. </p>
                 <div class="button" id="members-button" onclick="window.location.href='v1.5/members.html';">Members</div>
-                <img src="assets/img/mainscrollv15/pencil.svg" class="pencil d-flex justify-content-center  justify-content-center" alt="Drawing a better future.">
+                <img src="assets/img/mainscrollv15/pencil.svg" class="pencil d-flex justify-content-center" alt="Drawing a better future.">
                 <div class="container">
-                    <h2 id="about-title" class="d-flex d-flex justify-content-center  justify-content-center">Our Story</h2>
+                    <h2 id="about-title" class="d-flex justify-content-center">Our Story</h2>
                     <p class="container"> Learn more about our mission, values, and founding principles. </p>
                 </div>
                 <div class="button" id="about-button" onclick="window.location.href='v1.5/about.html';">About</div>
+                <img src="assets/img/mainscrollv15/pencil.svg" class="pencil d-flex justify-content-center" alt="Drawing a better future.">
+                <div class="container">
+                    <h2 id="projects-title" class="d-flex justify-content-center">Work with us.</h2>
+                    <p class="container"> Gain insight into our design process and project capabilities. </p>
+                </div>
+                <div class="button" id="projects-button" onclick="window.location.href='v1.5/projects.html';">Projects</div>
             </div>
         </div>
 
@@ -138,7 +147,6 @@
                         <div class="container">
                             <img src="assets/img/mainscrollv15/project-planet.svg" class="project-planet" alt="Exploring our recent projects.">
                         </div>
-                        <!-- <div class="button" id="projects-button" onclick="window.location.href='v1.5/projects.html';">Projects</div> -->
                     </div>
                     <div class="project-icon col-4 d-flex justify-content-center">
                         <a href="v1.5/netic15.html">
@@ -150,9 +158,8 @@
                             <img src="assets/img/mainscrollv15/bsfc.svg" class="project-link" alt="Student Food Collective">
                         </a>
                     </div>
-                    <div class="col-4 d-flex justify-content-center">
-                        <div class="button" id="projects-button" onclick="window.location.href='v1.5/projects.html';">Projects</div>
-                    </div>  
+                    <div class="col-4 space">
+                    </div>
                     <div class="project-icon col-4 d-flex justify-content-center">
                         <a href="v1.5/commcafe15.html">
                             <img src="assets/img/mainscrollv15/commcafe.svg" class="project-link" alt="Community Cafe">
@@ -166,8 +173,14 @@
 
     <!-- Footer -->
     <footer id="footer">
+        <div class="footer-icons">
+            <a href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/company/berkeley-invention-corps/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
         Made with ♥ by the
-        <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
+        <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team</a> </span>
     </footer>
 
     <!-- Bootstrap Scripts -->
