--- a/indexv15.html
+++ b/indexv15.html
@@ -174,10 +174,12 @@
     <!-- Footer -->
     <footer id="footer">
         <div class="footer-icons">
-            <a href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
-            <a href="https://www.linkedin.com/company/berkeley-invention-corps/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
-            <a href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <div class="row" style="padding: 0;">
+                <a class="col-3" href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a class="col-3" href="https://www.linkedin.com/company/berkeley-invention-corps/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a class="col-3" href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                <a class="col-3" href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
         </div>
         Made with ♥ by the
         <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team</a> </span>
