finished floating blocks: footer and deliv description

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -307,7 +307,7 @@
         <h2 class="deliverables-header">Deliverables</h2>
             <div class="container">
                 <p>
-                    PLACEHOLDER!!!
+                    We created a three-dimensional architectural model of a floating community block to illustrate streamlined and functional individual residences and a liveable community layout, while showing the block’s interaction with a water-filled landform.
                 </p> <!-- CHANGE to deliverables overview-->
             </div>
 
@@ -448,10 +448,18 @@
     <script src="../assets/js/members.js"></script>
 </body>
 
-<!-- Footer -->
-<footer>
-    Made with ♥ by the
-    <span> <a href="webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
-</footer>
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="footer-icons">
+            <div class="row" style="padding: 0;">
+                <a class="col-3 footer-icon-1" href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a class="col-3 footer-icon-2" href="https://www.linkedin.com/company/berkeley-invention-corps/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a class="col-3 footer-icon-3" href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                <a class="col-3 footer-icon-4" href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+        Made with ♥ by the
+        <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team</a> </span>
+    </footer>
 
 </html>
