--- a/indexv15.html
+++ b/indexv15.html
@@ -35,7 +35,7 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-light">
         <div class="container">
             <div class="d-flex flex-grow-1">
-                <a class="navbar-brand" href="../indexv15.html">
+                <a class="navbar-brand" href="indexv15.html">
                     <img src="assets/img/logo.svg" width="55" height="55" class="d-inline-block align-top" alt="Invention Corps Logo">
                 </a>
                 <div class="w-100 text-right">
@@ -175,10 +175,10 @@
     <footer id="footer">
         <div class="footer-icons">
             <div class="row" style="padding: 0;">
-                <a class="col-3" href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
-                <a class="col-3" href="https://www.linkedin.com/company/berkeley-invention-corps/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a class="col-3" href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                <a class="col-3" href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a class="col-3 footer-icon-1" href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a class="col-3 footer-icon-2" href="https://www.linkedin.com/company/berkeley-invention-corps/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a class="col-3 footer-icon-3" href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                <a class="col-3 footer-icon-4" href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
         Made with ♥ by the
