bsfc is complete

--- a/v1.5/alemany15.html
+++ b/v1.5/alemany15.html
@@ -250,7 +250,7 @@
             </div>
             <p>
                 <a href="" target="_blank" class="partner-link">Alemany Farm</a>  
-                Alemany Farm is a non-profit urban farm based in San Francisco that provides free, fresh, and nutritious produce to
+                is a non-profit urban farm based in San Francisco that provides free, fresh, and nutritious produce to
                 communities who cannot otherwise access it. It aims to grow food security and educate local residents about how they can
                 produce their own food. We worked with Abby Bell, the Farm Manager, and Jack Thomas, the Assistant Farm Manager.
 
