few small project changes

--- a/v1.5/commcafe15.html
+++ b/v1.5/commcafe15.html
@@ -337,16 +337,17 @@
                         <p class="p5 left">
                             To work in the space of food accessibility, we must now understand how the issue has been exacerbated due to the health crisis. 
                         </p>
-                        <p class="p6 left">
-                            We conducted user interviews with:
-                            <!-- CHANGE bullet point list -->
-                            <ul> 
-                                <li>Students experiencing food insecurity</li>
-                                <li>Members of the UC system who work in alleviating food insecurity among students</li>
-                                <li>External organizations combating food insecurity in the greater East Bay community</li>
-                            </ul>
-                            We compiled these points into an article <a href="https://medium.com/@neemarashidi/an-insecure-food-ture-in-the-bay-area-ccedfb6e6534" target="_blank" class="partner-link">here</a>.
-                        </p>
+                        <div class="p6 left">
+                            <p>
+                                We conducted user interviews with:
+                                <ul> 
+                                    <li>Students experiencing food insecurity</li>
+                                    <li>Members of the UC system who work in alleviating food insecurity among students</li>
+                                    <li>External organizations combating food insecurity in the greater East Bay community</li>
+                                </ul>
+                                We compiled these points into an article <a href="https://medium.com/@neemarashidi/an-insecure-food-ture-in-the-bay-area-ccedfb6e6534" target="_blank" class="partner-link">here</a>.
+                            </p>
+                        </div>
                     </div> <!--content of first deliverable section.
                                 Use  <p class="p[x]"> for each person who contributed where x is their order in the team section.
                                 Use two breaks (<br>) within a paragraph if the same person contributes for more than one paragraph.
