--- a/v1.5/concha15.html
+++ b/v1.5/concha15.html
@@ -287,7 +287,7 @@
             <div class="col-12 col-lg-6 order-lg-1">
                 <div class="container">
                     <div class="container subtitle">
-                        <img class="delivtitle" src="../assets/img/floatingblocks15/deliv-title-1.svg"> <!-- CHANGE to deliverable title 1 img-->
+                        <img class="delivtitle" src="../assets/img/concha15/deliv-title-1.svg"> <!--deliverable title 1 img-->
                     </div>
                     <div class="row">
                         <div class="col-2 col-sm-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-1.svg" class="nums"> </div>
@@ -298,25 +298,29 @@
                         </div>
                     </div>
                     <div class="container">
-                        <p class="p4 left">
-                            After performing some preliminary user testing, we found that the interface was poorly designed for people who were older and lacked experience with technology. Some constraints we wanted to keep in mind included:
-                            <ul>
-                                <li>Lack of visual acuity/color vision</li>
-                                <li>Limited dexterity/fine motor controls</li>
-                                <li>Unfamiliarity with touch screen gestures</li>
-                            </ul>
-                        </p>
-                        <p class="p3 left">
-                            After identifying specific problems with the UI and researching accessible design principles, we redesigned the interface with the following improvements in mind:
-                            <ul>
-                                <li>Clear instructions on each page</li>
-                                <li>Bolder + larger fonts and buttons</li>
-                                <li>Consistent feedback on progress</li>
-                                <li>Clear layouts with distinct calls to action</li>
-                                <li>More meaningful icons</li>
-                                <li>Give users ample time to complete tasks</li>
-                            </ul>
-                        </p>
+                        <div class="p4 left">
+                            <p>
+                                After performing some preliminary user testing, we found that the interface was poorly designed for people who were older and lacked experience with technology. Some constraints we wanted to keep in mind included:
+                                <ul>
+                                    <li>Lack of visual acuity/color vision</li>
+                                    <li>Limited dexterity/fine motor controls</li>
+                                    <li>Unfamiliarity with touch screen gestures</li>
+                                </ul>
+                            </p>
+                        </div>
+                        <div class="p3 left">
+                            <p>
+                                After identifying specific problems with the UI and researching accessible design principles, we redesigned the interface with the following improvements in mind:
+                                <ul>
+                                    <li>Clear instructions on each page</li>
+                                    <li>Bolder + larger fonts and buttons</li>
+                                    <li>Consistent feedback on progress</li>
+                                    <li>Clear layouts with distinct calls to action</li>
+                                    <li>More meaningful icons</li>
+                                    <li>Give users ample time to complete tasks</li>
+                                </ul>
+                            </p>
+                        </div>
                     </div> <!--content of first deliverable section.
                                 Use  <p class="p[x]"> for each person who contributed where x is their order in the team section.
                                 Use two breaks (<br>) within a paragraph if the same person contributes for more than one paragraph.
@@ -332,7 +336,7 @@
             <div class="col-12 col-lg-6 order-lg-4">
                 <div class="container">
                         <div class="container subtitle">
-                            <img class="delivtitle" src="../assets/img/floatingblocks15/deliv-title-2.svg"> <!-- CHANGE to deliverable title 2 img-->
+                            <img class="delivtitle" src="../assets/img/concha15/deliv-title-2.svg"> <!--deliverable title 2 img-->
                         </div>
                     <div class="row">
                         <div class="col-2 col-sm-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-2.svg" class="nums"> </div>
