thrive networks page finished

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -78,7 +78,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="holder">
                     <h1 id="proj-title">floating urban blocks</h1> <!-- CHANGE the title-->
-                    <h5>modeling communities that adapt to rising sea levels.</h5> <!-- CHANGE the text-->
+                    <h5>modeling communities that adapt to rising sea levels</h5> <!-- CHANGE the text-->
                     <br>
                     <hr id="topbar-hr">
                         <div class="row details">
