--- a/v1.5/netic15.html
+++ b/v1.5/netic15.html
@@ -438,7 +438,7 @@
                             in the coming months and years.
                         </p>
 
-                        <p class="PLACEHOLDER left">
+                        <p class="p PLACEHOLDER left">
                             Another feature introduced throughout the process was the idea of
                             adding some sort of social gamification to the platform so as to make it more
                             appealing for patients to follow-up on their treatment by encouraging healthy competition.
