netic user description

--- a/v1.5/netic15.html
+++ b/v1.5/netic15.html
@@ -271,7 +271,7 @@
                     </div>
                     <div class="d-flex justify-content-center"> <img src="../assets/img/users.svg" id="users"> </div>
                     <div class="user-txt"> <h7 class="user">physical therapy patients</h7> <!-- user -->
-                    <p>PLACEHOLDER</p> </div> <!--user extra details-->
+                    <p>who need access to physical therapy at home</p> </div> <!--user extra details-->
                 </div>
 
                 <div class="col-12 col-lg-8">
