hofmann project page

--- a/v1.5/netic15.html
+++ b/v1.5/netic15.html
@@ -514,12 +514,12 @@
                 <div class="row">
 
                     <div class="col-12">
-                        <div classs="img-container deliverable-img-container">
+                        <div class="img-container deliverable-img-container">
                             <img src="../assets/img/netic15/deliv-4.png" class="deliverable-img fourth"> <!-- fourth deliverable img-->
                         </div>
                     </div>
                     <div class="col-12">
-                        <div classs="img-container deliverable-img-container">
+                        <div class="img-container deliverable-img-container">
                             <iframe class ="deliverable-img youtube" width="560" height="315" src="https://www.youtube.com/embed/S6CXAxB5x-c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <!-- PLACEHOLDER Youtube embedded link-->
                         </div>
                     </div>
